--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-mesto-gha",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Tests](https://github.com/avcherepanov/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/avcherepanov/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/avcherepanov/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/avcherepanov/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint .",
