--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "url": "https://github.com/avcherepanov/express-mesto-gha/issues"
   },
   "homepage": "https://github.com/avcherepanov/express-mesto-gha#readme",
-  "dependencies": {
+  "devDependencies": {
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.0",
-    "moongoose": "^0.0.5"
+    "nodemon": "^2.0.16"
   },
-  "devDependencies": {
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1",
-    "nodemon": "^2.0.19"
+  "dependencies": {
+    "celebrate": "^15.0.1",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.8"
   }
 }
